Kubernetes/Demos/external-dns/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: external-dns
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.fernandoh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
